@@ -916,6 +916,17 @@ If
 .RB $ MANPATH
 is set, its value is used as the path to search for manual pages.
 .TP
+.if !'po4a'hide' .B MANROFFOPT
+The contents of
+.RB $ MANROFFOPT
+are added to the command line every time
+.B man
+invokes the formatter
+.RB ( nroff ,
+.BR troff ,
+or
+.BR groff ).
+.TP
 .if !'po4a'hide' .B MANROFFSEQ
 If
 .RB $ MANROFFSEQ
