@@ -51,6 +51,9 @@ Major changes since man-db 2.5.0:
 	  pre-C89 support have been removed; they were documented to be
 	  broken anyway.
 
+	o If the MANROFFOPT environment variable is set, man now appends its
+	  value to the *roff command line.
+
 man-db 2.5.0 (7 October 2007)
 =============================
 
